# FastFeud

./: CMakeLists.txt  LICENSE.md  README.md  ab_node.cpp  ab_node.h  alphabeta.cpp  alphabeta.h  board.cpp  board.h  main.cpp  start.sh
config/: rules.txt
config/positions/: analysis1.txt  broken1.txt  broken2.txt  endgame2.txt
positions/: README.md  broken1.txt  broken2.txt  default1.txt  endgame1.txt  endgame2.txt
src/: CMakeLists.txt  ab_node.cpp  alphabeta.cpp  alphabeta.h  board.cpp  board.h  main.cpp  rules.txt
tests/: CMakeLists.txt  board_test.cpp
tests/test_positions/: archer_bug.txt  medic_bug.txt  simple1.txt
